--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "mobx": "^6.3.2",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
+    "autoprefixer": "^10.3.0",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4",
     "typescript": "4.3.5"
   }
 }
