--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@types/react": "17.0.14",
     "autoprefixer": "^10.3.0",
     "postcss": "^8.3.5",
