--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,13 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "experimentalDecorators": true
+    "baseUrl": "."
   },
   "include": [
     "next-env.d.ts",
